# drift-report-plugin

./: .dockerignore  .flake8  .gitmodules  Dockerfile  Makefile  README.md  alembic.ini  demo.docker-compose.yml  docker-compose.yml  pyproject.toml  start.sh
ui/: .eslintrc.json  README.md  angular.json  karma.conf.js  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.config.js
ui/src/: index.html  styles.scss
ui/src/app/: app.component.ts  app.module.ts
ui/src/app/domain/: report.ts
ui/src/app/features/: http.service.ts
ui/src/app/features/drift-report/: drift-report-http.service.ts  drift-report-routing.module.ts  drift-report.component.html  drift-report.component.scss  drift-report.component.ts  drift-report.module.ts
ui/src/app/features/drift-report/components/: index.ts
ui/src/app/features/drift-report/directives/: color-by-drift.directive.ts
ui/src/app/features/drift-report/mocks/: drift-report.mock.ts  heatmap.mock.ts  index.ts
ui/src/app/features/drift-report/models/: drift-report.ts  heatmap.model.ts  index.ts
ui/src/app/features/drift-report/state/: drift-report.facade.ts  drift-report.query.ts  (+2 more)
ui/src/app/features/reports/: drift-report-http.service.ts  reports-http.service.ts  reports-page.component.ts  reports-routing.module.ts  reports.component.html  reports.component.scss  reports.component.ts  reports.module.ts
ui/src/app/layout/: layout-routing.module.ts  layout.component.html  layout.component.ts  layout.module.ts
ui/src/environments/: environment.prod.ts  environment.ts
(+57 files in other folders)
