[tool.poetry]
name = "drift_report"
version = "0.1.0"
description = ""
authors = ["hydrosphere.io"]

[tool.poetry.dependencies]
python = "^3.8"
pandas="1.2.5"
requests="2.23.0"
scikit-learn = "^0.24.2"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
s3fs = "^2021.11.0"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
grpcio-tools = "^1.41.1"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.1"
flake8-black = "^0.2.3"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
