[tool.poetry]
name = "hydrosphere-drift-report-ui"
version = "0.1.0"
description = ""
authors = ["Paul Mck <vixtir90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
aiofiles = "^0.7.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
